<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/borde_inferior_layout">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/numero3"
        android:layout_alignParentLeft="true"
        android:id="@+id/iv_numero3"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalizarCompra"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/iv_numero3"
        android:paddingTop="8dp"
        />

    </RelativeLayout>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:orientation="vertical"
           android:id="@+id/layout_textosFinalizarCompra">
           <com.proconsi.leondecompras.views.TextViewTypeface
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:text="@string/compraRealizada"
               android:textColor="@color/color_primary_dark"
               android:textSize="17dp"
               android:id="@+id/tv_compraRealizada"/>
           <com.proconsi.leondecompras.views.TextViewTypeface
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/textoCorreo"
               android:textColor="@color/color_primary"
               android:textSize="15dp"
               android:paddingTop="8dp"
               android:id="@+id/tv_textoCorreo"
               android:paddingLeft="@dimen/activity_margin"
               android:paddingRight="@dimen/activity_margin"/>
           <com.proconsi.leondecompras.views.TextViewTypeface
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/textoConfirmacion"
               android:paddingLeft="10dp"
               android:paddingRight="10dp"
               android:textColor="@color/color_primary"
               android:textSize="15dp"
               />
           <com.proconsi.leondecompras.views.TextViewTypeface
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/textoInstrucciones"
               android:textColor="@color/color_primary"
               android:textSize="15dp"
               android:paddingLeft="3dp"
               />

       </LinearLayout>
       <com.proconsi.leondecompras.views.TextViewTypeface
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/gracias"
           android:paddingTop="@dimen/activity_horizontal_margin"
           android:textColor="@color/color_primary"
           android:textSize="15dp"
           android:layout_centerInParent="true"
           android:id="@+id/tv_gracias"
           android:layout_below="@+id/layout_textosFinalizarCompra"
           />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_alignParentBottom="true">
           <Button
               android:layout_width="match_parent"
               android:layout_height="45dp"
               android:layout_gravity="center"
               android:id="@+id/bt_continuarCompra"
               android:text="@string/continuarComprando"
               android:layout_margin="@dimen/activity_horizontal_margin"
               android:background="@drawable/fondo_redondo_colorprimary_border"
               android:textColor="@color/blanco_perfecto"/>
       </LinearLayout>
   </RelativeLayout>




</LinearLayout>
