<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco_perfecto"
            android:textSize="20dp"
            android:text="@string/seleccionaTarjeta"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_gravity="center" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@drawable/borde_completo_colorprimary_layout"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/lv_listaTarjetas"
            ></ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/bt_cancelarTarjeta"
            android:text="@string/cancelar"
            android:background="@color/rojoclaro"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:background="@color/verdeclaro"
            android:id="@+id/bt_aceptarTarjeta"/>
    </LinearLayout>

</LinearLayout>
