<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/borde_inferior_layout">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle"
            android:layout_alignParentLeft="true"
            android:id="@+id/iv_numero1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmacionCompra"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/iv_numero1"
            android:paddingTop="8dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/numero2degra"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/imageView" />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:id="@+id/iv_producto"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nombreProducto"
                android:textSize="15dp"
                android:textStyle="bold"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_descripcionProducto"
                android:layout_below="@+id/tv_nombreProducto"
                android:textSize="15dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/borde_inferior_layout"
        android:padding="@dimen/activity_horizontal_margin"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/vendedor2"
                android:textColor="@color/color_primary"
               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nombreVendedor"
                android:textSize="20dp"
                android:textStyle="bold"
               />
        </LinearLayout>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:id="@+id/bt_contactar"
            android:text="@string/contactar"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/blanco_perfecto"
            android:background="@drawable/fondo_redondo_colorprimary_border"
            android:drawableLeft="@drawable/phone2"
            android:drawablePadding="-12dp"
            android:paddingLeft="5dp"


           />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding ="@dimen/activity_horizontal_margin"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="-8dp"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_recogerTienda"
                android:checked="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recogerTienda"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/layout_mostraMapa"
           >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_iconGps"
                android:src="@drawable/gpsmap"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mostrarMapa"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/bt_cancelarCompra"
            android:text="@string/cancelarCompra"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/cancelar"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/fondo_redondoizq_blanco_grisclaro"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/bt_seguirComprando"
            android:text="@string/seguirComprando"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/next"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/fondo_redondoderecha_blanco_grisclaro"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border_layout">
        <LinearLayout
            android:id="@+id/contenedor_seleccionar_unidades"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:background="@drawable/border_layout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unidades"
                android:textColor="@color/color_primary"
                android:textSize="13dp"/>

            <com.proconsi.leondecompras.views.ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:src="@drawable/ic_triangle_up"/>

            <com.proconsi.leondecompras.views.TextViewTypeface
                android:id="@+id/tvt_unidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="1"
                android:textColor="@color/color_primary"
                android:textSize="20dp"
                />

            <com.proconsi.leondecompras.views.ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:src="@drawable/ic_triangle_down"/>
        </LinearLayout>
            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/border_layout"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalles"
                    android:layout_gravity="right"
                    android:textSize="13dp"

                    android:textColor="@color/color_primary"
                    android:paddingRight="@dimen/activity_horizontal_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_precioCompra"
                    android:textColor="@color/gris_muy_claro"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="20dp"
                    android:layout_gravity="right|bottom"
                    />
            </LinearLayout>
            <LinearLayout

                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/border_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pagar"
                    android:textSize="13dp"
                    android:textColor="@color/color_primary"
                    android:layout_gravity="right"
                    android:paddingRight="@dimen/activity_horizontal_margin"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="right"
                    android:layout_marginTop="13dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_cantidadPagar"
                        android:textColor="@color/color_primary"
                        android:textSize="30dp"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="€"
                        android:textSize="25dp"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingLeft="3dp"

                        />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:id="@+id/bt_comprar"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/fondo_redondo_colorprimary_border"
            android:textColor="@color/blanco_perfecto"/>
    </LinearLayout>





</LinearLayout>
